package edu.hitsz.aircraft;

public interface ObserverAircraft {
    void update();
}
