package edu.hitsz.supply;

public class BloodSupply extends BaseSupply{
    public BloodSupply(int locationX, int locationY, int speedX, int speedY, int value) {
        super(locationX, locationY, speedX, speedY, value);
    }
}
