package edu.hitsz.supply;

public class BombSupply extends BaseSupply{
    public BombSupply(int locationX, int locationY, int speedX, int speedY, int value) {
        super(locationX, locationY, speedX, speedY, value);
    }
}
