package edu.hitsz.supply;

public class BulletSupply extends BaseSupply{
    public BulletSupply(int locationX, int locationY, int speedX, int speedY, int value) {
        super(locationX, locationY, speedX, speedY, value);
    }
}
